// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpensesSummary with multiple expenses 1`] = `
<div>
  <p>
    11
     expenses totalling: 
    $53,453.42
  </p>
</div>
`;

exports[`render ExpensesSummary with one expense 1`] = `
<div>
  <p>
    1
     expenses totalling: 
    $2.53
  </p>
</div>
`;
